fix: fix desktop card spacing

--- a/css/card.css
+++ b/css/card.css
@@ -6,30 +6,6 @@
   display: grid;
 }
 
-@media screen and (min-width: 48rem) {
-  .section {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .card-luxury {
-    grid-column: 1 / -1;
-  }
-}
-
-@media screen and (min-width: 64rem) {
-  .section {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  .card {
-    max-width: 18.75rem;
-  }
-
-  .card-luxury {
-    grid-column: auto;
-  }
-}
-
 .card {
   display: grid;
   gap: var(--spacing-xm);
@@ -62,6 +38,7 @@
 }
 
 .card__button {
+  max-width: 10rem;
   padding: var(--spacing-sm);
   border-radius: 1.5rem;
   font-family: var(--ff-text);
@@ -84,4 +61,32 @@
 }
 .card__button-luxury {
   color: var(--primary-bg3);
+}
+
+@media screen and (min-width: 48rem) {
+  .section {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .card-luxury {
+    grid-column: 1 / -1;
+  }
+}
+
+@media screen and (min-width: 64rem) {
+  .section {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .card {
+    max-width: 18.75rem;
+  }
+
+  .card-luxury {
+    grid-column: auto;
+  }
+
+  .card__desc {
+    margin-block-end: var(--spacing-xl);
+  }
 }
